rework acount page UI
